welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: not found: value isFaicingTrail
    if (isFaicingTrail(c)) {
        ^